--- a/Imobilier.ipynb
+++ b/Imobilier.ipynb
@@ -16,9 +16,9 @@
         "id": "23450efb-fa8c-4160-a4e8-488b20362052"
       },
       "source": [
+        ":\n",
         "\n",
-        "\n",
-        "<h1 align=\"center\"><font size=\"5\">Final Project: House Sales in King County, USA </font></h1>\n"
+        "<h1 align=\"center\"><font size=\"5\">Project: Ventes de maisons dans le comté de King, États-Unis</font></h1>\n"
       ]
     },
     {
@@ -36,9 +36,7 @@
         "id": "d0135559-4f80-436c-b6a3-d35baf28c8a2"
       },
       "source": [
-        "In this assignment, you are a Data Analyst working at a Real Estate Investment Trust. The Trust would like to start investing in Residential real estate. You are tasked with determining the market price of a house given a set of features. You will analyze and predict housing prices using attributes or features such as square footage, number of bedrooms, number of floors, and so on. This is a template notebook; your job is to complete the ten questions. Some hints to the questions are given.\n",
-        "\n",
-        "As you are completing this notebook, take and save the **screenshots** of the final outputs of your solutions (e.g., final charts, tables, calculation results etc.). They will need to be shared in the following Peer Review section of the Final Project module.\n"
+        "Dans cette mission, vous êtes un analyste de données travaillant dans une société de placement immobilier. La société souhaite commencer à investir dans l'immobilier résidentiel. Vous êtes chargé de déterminer le prix du marché d'une maison en fonction d'un ensemble de caractéristiques. Vous analyserez et prédirez les prix des logements à l'aide d'attributs ou de caractéristiques tels que la superficie en pieds carrés, le nombre de chambres, le nombre d'étages, etc. Il s'agit d'un modèle de cahier ; votre travail consiste à répondre aux dix questions.\n"
       ]
     },
     {
@@ -57,7 +55,7 @@
         "from sklearn.linear_model import LinearRegression\n",
         "%matplotlib inline"
       ],
-      "execution_count": 69
+      "execution_count": null
     },
     {
       "cell_type": "code",
@@ -71,7 +69,7 @@
         "\n",
         "df = pd.read_csv(url)"
       ],
-      "execution_count": 70
+      "execution_count": null
     },
     {
       "cell_type": "code",
@@ -684,7 +682,7 @@
       "source": [
         "df.dtypes"
       ],
-      "execution_count": 71
+      "execution_count": null
     },
     {
       "cell_type": "markdown",
@@ -1224,7 +1222,7 @@
       "source": [
         "df.describe()"
       ],
-      "execution_count": 72
+      "execution_count": null
     },
     {
       "cell_type": "markdown",
@@ -1245,7 +1243,7 @@
       "metadata": {
         "id": "hrafskd-MaWu"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1747,7 +1745,7 @@
       "source": [
         "df.describe()"
       ],
-      "execution_count": 74
+      "execution_count": null
     },
     {
       "cell_type": "markdown",
@@ -1803,7 +1801,7 @@
         "mean=df['bedrooms'].mean()\n",
         "df['bedrooms'].replace(np.nan,mean, inplace=True)"
       ],
-      "execution_count": 75
+      "execution_count": null
     },
     {
       "cell_type": "markdown",
@@ -1825,7 +1823,7 @@
         "mean=df['bathrooms'].mean()\n",
         "df['bathrooms'].replace(np.nan,mean, inplace=True)"
       ],
-      "execution_count": 76
+      "execution_count": null
     },
     {
       "cell_type": "code",
@@ -1850,7 +1848,7 @@
         "print(\"number of NaN values for the column bedrooms :\", df['bedrooms'].isnull().sum())\n",
         "print(\"number of NaN values for the column bathrooms :\", df['bathrooms'].isnull().sum())"
       ],
-      "execution_count": 77
+      "execution_count": null
     },
     {
       "cell_type": "markdown",
@@ -2165,7 +2163,7 @@
       "source": [
         "df['floors'].value_counts().to_frame()"
       ],
-      "execution_count": 79
+      "execution_count": null
     },
     {
       "cell_type": "markdown",
@@ -2195,7 +2193,7 @@
         "id": "6lCrBMlGPER-",
         "outputId": "6f4e1db5-721b-4bc2-f472-3fc7b715fb99"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2249,7 +2247,7 @@
         "plt.ylabel('Price')\n",
         "plt.show()"
       ],
-      "execution_count": 81
+      "execution_count": null
     },
     {
       "cell_type": "markdown",
@@ -2307,7 +2305,7 @@
         "# Affichage du résultat\n",
         "print(correlation_with_price)"
       ],
-      "execution_count": 82
+      "execution_count": null
     },
     {
       "cell_type": "markdown",
@@ -2346,7 +2344,7 @@
         "lm.fit(X,Y)\n",
         "lm.score(X, Y)"
       ],
-      "execution_count": 84
+      "execution_count": null
     },
     {
       "cell_type": "markdown",
@@ -2369,7 +2367,7 @@
       "metadata": {
         "id": "EnG6EpS-SY9M"
       },
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2410,7 +2408,7 @@
         "# Afficher le résultat\n",
         "print(f\"Le R^2 du modèle est : {r2:.4f}\")"
       ],
-      "execution_count": 93
+      "execution_count": null
     },
     {
       "cell_type": "markdown",
@@ -2433,7 +2431,7 @@
       "source": [
         "features =[\"floors\", \"waterfront\",\"lat\" ,\"bedrooms\" ,\"sqft_basement\" ,\"view\" ,\"bathrooms\",\"sqft_living15\",\"sqft_above\",\"grade\",\"sqft_living\"]"
       ],
-      "execution_count": 87
+      "execution_count": null
     },
     {
       "cell_type": "markdown",
@@ -2481,7 +2479,7 @@
         "# Afficher le résultat\n",
         "print(f\"Le R^2 du modèle est : {r2:.4f}\")\n"
       ],
-      "execution_count": 92
+      "execution_count": null
     },
     {
       "cell_type": "markdown",
@@ -2501,7 +2499,7 @@
       "source": [
         "Input=[('scale',StandardScaler()),('polynomial', PolynomialFeatures(include_bias=False)),('model',LinearRegression())]"
       ],
-      "execution_count": 89
+      "execution_count": null
     },
     {
       "cell_type": "markdown",
@@ -2548,7 +2546,7 @@
         "# Afficher le résultat\n",
         "print(f\"Le R^2 du modèle est : {r2:.4f}\")"
       ],
-      "execution_count": 91
+      "execution_count": null
     },
     {
       "cell_type": "code",
@@ -2573,7 +2571,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "print(\"done\")"
       ],
-      "execution_count": 94
+      "execution_count": null
     },
     {
       "cell_type": "markdown",
@@ -2615,7 +2613,7 @@
         "print(\"number of test samples:\", x_test.shape[0])\n",
         "print(\"number of training samples:\",x_train.shape[0])"
       ],
-      "execution_count": 95
+      "execution_count": null
     },
     {
       "cell_type": "markdown",
@@ -2637,7 +2635,7 @@
       "source": [
         "from sklearn.linear_model import Ridge"
       ],
-      "execution_count": 98
+      "execution_count": null
     },
     {
       "cell_type": "code",
@@ -2672,7 +2670,7 @@
         "\n",
         "print(f\"Le R^2 du modèle Ridge est : {r2:.4f}\")\n"
       ],
-      "execution_count": 101
+      "execution_count": null
     },
     {
       "cell_type": "markdown",
@@ -2719,7 +2717,7 @@
         "\n",
         "print(f\"Le R^2 du modèle Ridge avec transformation polynomiale est : {r2:.4f}\")\n"
       ],
-      "execution_count": 103
+      "execution_count": null
     },
     {
       "cell_type": "markdown",
